Fix missing systemError functor. Add .title to field and labl. Add .align to label. Make children of td into block elements and give them 100% width

--- a/proactive.css
+++ b/proactive.css
@@ -207,3 +207,12 @@ th > *
 {
     width: 100%;
 }
+
+/* Make each table cell object take up the entire td.
+   Note that only block objects can have a width
+*/
+td > *
+{
+    display: block;
+    width: 100%;
+}
